rns-lang/tests/snapshots/parser-class_directive-header-name-integer_as_class_name.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.class public 42
.super java/lang/Object

----- STDOUT -----

----- STDERR -----
Error: Expected class name but found integer
   ╭─[ test_data/integration/parser/class_directive/header/name/integer_as_class_name.ja:1:15 ]
   │
 1 │ .class public 42
   │               ─┬  
   │                ╰── Found '42' instead of a class name. The .class directive requires a class name after optional access flags.
   │ 
   │ Note: Integer literals cannot be used as class names.
───╯
